# prob_rob_labs

./: CMakeLists.txt  package.xml
doc/: notes.txt
include/: hinge_control.h
labs/: CMakeLists.txt  setup.py
labs/config/: joystick.yaml
labs/launch/: corrrespondance_matcher.launch  ekf_landmarks.launch  ekf_odom.launch  flaky_door_opener.launch  ground_truth_extractor.launch  image_mean_feature_x.launch  image_viewer.launch  jackal_among_landmarks.launch  jackal_and_door.launch  jackal_door_and_firetruck.launch  joystick.launch  landmark_vision.launch  measurement_model_estimator.launch  odometry_error_tracker.launch  open_door_and_move.launch  pixel_measurement_predictor.launch
labs/src/corrrespondance_matcher/: corrrespondance_matcher.py
labs/src/ekf_landmarks/: ekf_landmarks.py
labs/src/ekf_odom/: ekf_odom.py  frames.gv
labs/src/flaky_door_opener/: flaky_door_opener.py
labs/src/ground_truth_extractor/: ground_truth_extractor.py
labs/src/image_mean_feature_x/: image_mean_feature_x.py
labs/src/measurement_model_estimator/: measurement_model_estimator.py
labs/src/odometry_error_tracker/: odometry_error_tracker.py
labs/src/open_door_and_move/: open_door_and_move.py
labs/src/pixel_measurement_predictor/: measuremeant_model.py  pixel_measurement_predictor.py
labs/worlds/: door.world  door_and_firetruck.world  landmarks.world
launch/: jackal_and_door.launch
misc/: cmd_vel_pub.py
models/: package.xml
models/blue_ground_plane/: model.sdf
models/hinged_glass_door/: model-1_4.sdf  model.config  model.sdf
models/models/green_landmark/: model.sdf
models/models/magenta_landmark/: model.sdf
models/models/red_landmark/: model.sdf
models/models/yellow_landmark/: model.sdf
src/: hinge_control.cpp
tools/: new_python_ros_node
worlds/: door.world
