<?xml version="1.0"?>
<package>
  <name>lab_bayes_filter</name>
  <version>0.0.1</version>
  <description>Demonstrates the use of bayes filter to decide whether the door is open. Background reading: Chatper 1 in Thrun</description>

  <maintainer email="ih2435@columbia.edu">Ilija Hadzic</maintainer>
  <author>Ilija Hadzic</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>jackal_gazebo</run_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
