<?xml version="1.0"?>
<package>
  <name>prob_rob_labs</name>
  <version>0.0.1</version>
  <description>A set of lab exercises for Probabilistic Robotics course. Department of Electrical Engineering, Columbia University</description>

  <maintainer email="ih2435@columbia.edu">Ilija Hadzic</maintainer>
  <author>Ilija Hadzic</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>jackal_gazebo</run_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
